--- a/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
+++ b/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
@@ -407,6 +407,7 @@
     <Compile Include="Commands\DA\DASynchCampSums.cs" />
     <Compile Include="Commands\DA\DASynchCriteoStats.cs" />
     <Compile Include="Commands\DA\DASynchDBMStats2.cs" />
+    <Compile Include="Commands\DA\DASynchKochavaStats.cs" />
     <Compile Include="Commands\DA\DASynchYAMStats.cs" />
     <Compile Include="Commands\EOMSynchCPCCommand.cs" />
     <Compile Include="Commands\DA\DASynchFacebookAdPreviews.cs" />
@@ -427,6 +428,9 @@
     <Compile Include="Commands\Test\TestYAMCommand.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Common\ArchiveExctractors\Contract\IArchiveExtractor.cs" />
+    <Compile Include="Common\ArchiveExctractors\GzipArchiveExtractor.cs" />
+    <Compile Include="Common\ArchiveExctractors\ZipArchiveExtractor.cs" />
     <Compile Include="Common\Compare.cs" />
     <Compile Include="Common\SqlScriptsExecutor.cs" />
     <Compile Include="Common\StorageCollection.cs" />
@@ -447,7 +451,7 @@
     <Compile Include="Etl\CakeMarketing\Extracters\SubIdSummariesExtracter.cs" />
     <Compile Include="Etl\CakeMarketing\Loaders\CPCLoader.cs" />
     <Compile Include="Etl\DSP\Configuration\AmazonDspConfigurationProvider.cs" />
-    <Compile Include="Etl\DSP\Configuration\AmazonDspAccountsProvider.cs" />
+    <Compile Include="Etl\CommandsExecutionAccountsProvider.cs" />
     <Compile Include="Etl\DSP\Extractors\AmazonDspExtractor.cs" />
     <Compile Include="Etl\DSP\Extractors\Composer\DspReportDataComposer.cs" />
     <Compile Include="Etl\DSP\Extractors\Parser\DspReportCsvParser.cs" />
@@ -461,13 +465,20 @@
     <Compile Include="Etl\DSP\Loaders\ReportEntriesDataLoaders\DspItemMetricManager.cs" />
     <Compile Include="Etl\DSP\Loaders\ReportEntriesDataLoaders\LineItemsDataLoader.cs" />
     <Compile Include="Etl\DSP\Loaders\ReportEntriesDataLoaders\OrdersDataLoader.cs" />
-    <Compile Include="Etl\DSP\Models\AmazonDspAccauntDailyReportData.cs" />
+    <Compile Include="Etl\DSP\Models\AmazonDspAccountDailyReportData.cs" />
     <Compile Include="Etl\DSP\Models\ReportEntities\ReportAdvertiser.cs" />
     <Compile Include="Etl\DSP\Models\AmazonDspDailyReportData.cs" />
     <Compile Include="Etl\DSP\Models\ReportEntities\ReportCreative.cs" />
     <Compile Include="Etl\DSP\Models\ReportEntities\ReportLineItem.cs" />
     <Compile Include="Etl\DSP\Models\ReportEntities\DspReportEntity.cs" />
     <Compile Include="Etl\DSP\Models\ReportEntities\ReportOrder.cs" />
+    <Compile Include="Etl\Kochava\Configuration\KochavaConfigurationProvider.cs" />
+    <Compile Include="Etl\Kochava\Extractors\KochavaExtractor.cs" />
+    <Compile Include="Etl\Kochava\Extractors\Parsers\KochavaReportParser.cs" />
+    <Compile Include="Etl\Kochava\Extractors\Parsers\ParsingConverters\KochavaReportEntityRowMap.cs" />
+    <Compile Include="Etl\Kochava\Loaders\KochavaItemsDbService.cs" />
+    <Compile Include="Etl\Kochava\Loaders\KochavaLoader.cs" />
+    <Compile Include="Etl\Kochava\Models\KochavaReportItem.cs" />
     <Compile Include="Etl\SearchMarketing\Extracters\AppleApiExtracter.cs" />
     <Compile Include="Etl\SearchMarketing\Extracters\BingExtractors\BingConvSummaryExtracter.cs" />
     <Compile Include="Etl\SearchMarketing\Extracters\BingExtractors\BingDailyNonShoppingSummaryExtractor.cs" />
