--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -7,19 +7,10 @@
   </configSections>
 
   <connectionStrings>
-    <!--<add name="ClientPortalContext" connectionString="metadata=res://*/Contexts.ClientPortal.csdl|res://*/Contexts.ClientPortal.ssdl|res://*/Contexts.ClientPortal.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=biz\sqlexpress;initial catalog=DirectAgentsTest;user id=sa;password=sp0ngbOb;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-    <add name="ClientPortalContext" connectionString="metadata=res://*/Contexts.ClientPortal.csdl|res://*/Contexts.ClientPortal.ssdl|res://*/Contexts.ClientPortal.msl;provider=System.Data.SqlClient;provider connection string=&quot;Server=tcp:daazure2.database.windows.net,1433;Initial Catalog=DirectAgentsDev;Persist Security Info=False;User ID=daadmin;Password=bObsp0ng!;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <!--<add name="ClientPortalContext" connectionString="metadata=res://*/Contexts.ClientPortal.csdl|res://*/Contexts.ClientPortal.ssdl|res://*/Contexts.ClientPortal.msl;provider=System.Data.SqlClient;provider connection string=&quot;Server=tcp:daazure1.database.windows.net,1433;Initial Catalog=DirectAgents1;Persist Security Info=False;User ID=daadmin;Password=bObsp0ng;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-    <!--<add name="ClientPortalProgContext" connectionString="data source=biz\sqlexpress;initial catalog=DirectAgentsTest;user id=sa;password=sp0ngbOb; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />-->
-    <add name="ClientPortalProgContext" connectionString="Server=tcp:daazure2.database.windows.net,1433;Initial Catalog=DirectAgentsDev;Persist Security Info=False;User ID=daadmin;Password=bObsp0ng!;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
-    <!--<add name="ClientPortalProgContext" connectionString="Server=tcp:daazure1.database.windows.net,1433;Initial Catalog=DirectAgents1;Persist Security Info=False;User ID=daadmin;Password=bObsp0ng;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />-->
-    <!--<add name="ClientPortalSearchContext" connectionString="data source=biz\sqlexpress;initial catalog=DirectAgentsTest;user id=sa;password=sp0ngbOb; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />-->
-    <add name="ClientPortalSearchContext" connectionString="Server=tcp:daazure2.database.windows.net,1433;Initial Catalog=DirectAgentsDev;Persist Security Info=False;User ID=daadmin;Password=bObsp0ng!;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
-    <!--<add name="ClientPortalSearchContext" connectionString="Server=tcp:daazure1.database.windows.net,1433;Initial Catalog=DirectAgents1;Persist Security Info=False;User ID=daadmin;Password=bObsp0ng;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />-->
-    <!--<add name="DAContext" connectionString="data source=biz\sqlexpress;initial catalog=DirectAgentsDev;user id=sa;password=sp0ngbOb; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />-->
-    <!--<add name="DAContext" connectionString="data source=biz\sqlexpress;initial catalog=DirectAgentsDomain;user id=sa;password=sp0ngbOb; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />-->
-    <add name="DAContext" connectionString="Server=tcp:daazure2.database.windows.net,1433;Initial Catalog=DirectAgentsDev;Persist Security Info=False;User ID=daadmin;Password=bObsp0ng!;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
-    <!--<add name="DAContext" connectionString="Server=tcp:daazure1.database.windows.net,1433;Initial Catalog=DirectAgents1;Persist Security Info=False;User ID=daadmin;Password=bObsp0ng;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />-->
+    <add name="ClientPortalContext" connectionString="" providerName="System.Data.EntityClient" />
+    <add name="ClientPortalProgContext" connectionString="" providerName="System.Data.SqlClient" />
+    <add name="ClientPortalSearchContext" connectionString="" providerName="System.Data.SqlClient" />
+    <add name="DAContext" connectionString="" providerName="System.Data.SqlClient" />
   </connectionStrings>
 
   <loggingConfiguration name="" tracingEnabled="true" defaultCategory="General">
