YAM ETL: Added the parameter "YAM_NumTries_RequestReport" to configs, default value is "12". This parameter is used in the retry logic for report generating - this is a number of retries.

--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -182,6 +182,7 @@
     <add key="YahooApplicationAccessCode_Alt1" value="3ueb2k7" />
     <add key="YAMBaseUrl" value="https://api-sched-v3.admanagerplus.yahoo.com/yamplus_api" />
     <add key="YAM_NumTries_GetReportStatus" value="15" />
+    <add key="YAM_NumTries_RequestReport" value="12" />
     <add key="YAM_WaitTime_Seconds" value="180" />
     <add key="YAMMap_PostClickConv" value="Click Through Conversion" />
     <add key="YAMMap_PostViewConv" value="View Through Conversion" />
