--- a/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
+++ b/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
@@ -434,14 +434,15 @@
     <Compile Include="Common\ArchiveExctractors\ZipArchiveExtractor.cs" />
     <Compile Include="Common\CommandLineUtils.cs" />
     <Compile Include="Common\Compare.cs" />
+    <Compile Include="Common\JobExecutionManagement\CommandExecutionContext.cs" />
     <Compile Include="Common\JobExecutionManagement\JobExecution\IJobExecutionDataWriter.cs" />
     <Compile Include="Common\JobExecutionManagement\JobExecution\Models\AccountLogData.cs" />
     <Compile Include="Common\JobExecutionManagement\JobExecution\Models\JobExecutionLogData.cs" />
     <Compile Include="Common\JobExecutionManagement\JobExecution\Services\JobExecutionItemService.cs" />
     <Compile Include="Common\JobExecutionManagement\JobExecution\JobExecutionDataWriter.cs" />
     <Compile Include="Common\JobExecutionManagement\JobExecution\Services\IJobExecutionItemService.cs" />
-    <Compile Include="Common\JobExecutionManagement\JobExecution\Repositories\IJobExecutionHistoryItemRepository.cs" />
-    <Compile Include="Common\JobExecutionManagement\JobExecution\Repositories\JobExecutionHistoryItemRepository.cs" />
+    <Compile Include="Common\JobExecutionManagement\JobExecution\Repositories\IJobExecutionItemRepository.cs" />
+    <Compile Include="Common\JobExecutionManagement\JobExecution\Repositories\JobExecutionItemRepository.cs" />
     <Compile Include="Common\SqlScriptsExecutor.cs" />
     <Compile Include="Common\StorageCollection.cs" />
     <Compile Include="Common\TextUtils.cs" />
