--- a/3/CakeExtracter.ConsoleApplication/packages.config
+++ b/3/CakeExtracter.ConsoleApplication/packages.config
@@ -9,7 +9,14 @@
   <package id="Microsoft.CSharp" version="4.0.1" targetFramework="net452" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net45" />
   <package id="Microsoft.Web.WebJobs.Publish" version="1.0.13" targetFramework="net452" />
+  <package id="Microsoft.Win32.Primitives" version="4.0.1" targetFramework="net461" />
   <package id="Mono.Options" version="5.3.0" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net461" />
   <package id="Quartz" version="2.1.2" targetFramework="net45" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.0.0" targetFramework="net461" />
+  <package id="System.Net.Http" version="4.1.2" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.2.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Encoding" version="4.0.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Primitives" version="4.0.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.1.0" targetFramework="net461" />
 </packages>
