Update the run of a command to create the job request object correctly in the database.

--- a/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
+++ b/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
@@ -444,8 +444,10 @@
     <Compile Include="Common\JobExecutionManagement\JobExecution\Repositories\IJobExecutionItemRepository.cs" />
     <Compile Include="Common\JobExecutionManagement\JobExecution\Repositories\JobExecutionItemRepository.cs" />
     <Compile Include="Common\JobExecutionManagement\JobExecution\Utils\ExecutionLoggingUtils.cs" />
-    <Compile Include="Common\JobRequests\JobExecutionRequestManager.cs" />
-    <Compile Include="Common\JobRequests\Repositories\JobRequestRepository.cs" />
+    <Compile Include="Common\JobExecutionManagement\JobRequests\JobExecutionRequestManager.cs" />
+    <Compile Include="Common\JobExecutionManagement\JobRequests\Repositories\JobRequestRepository.cs" />
+    <Compile Include="Common\JobExecutionManagement\JobRequests\Utils\CommandArgumentsConverter.cs" />
+    <Compile Include="Common\JobExecutionManagement\JobRequests\Utils\ProcessManager.cs" />
     <Compile Include="Common\SqlScriptsExecutor.cs" />
     <Compile Include="Common\StorageCollection.cs" />
     <Compile Include="Common\TextUtils.cs" />
