Draft job execution history page.

--- a/3/DirectAgents.Web/DirectAgents.Web/Web.config
+++ b/3/DirectAgents.Web/DirectAgents.Web/Web.config
@@ -11,10 +11,10 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="DAContext" connectionString="" providerName="System.Data.SqlClient" />
-    <add name="ClientPortalProgContext" connectionString="" providerName="System.Data.SqlClient" />
-    <add name="ClientPortalSearchContext" connectionString="" providerName="System.Data.SqlClient" />
-    <add name="ClientPortalContext" connectionString="metadata=res://*/Contexts.ClientPortal.csdl|res://*/Contexts.ClientPortal.ssdl|res://*/Contexts.ClientPortal.msl;provider=System.Data.SqlClient;provider connection string=&quot;Server=SERVER;Initial Catalog=DB;Persist Security Info=False;User ID=USER;Password=PASSWORD;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ClientPortalContext" connectionString="metadata=res://*/Contexts.ClientPortal.csdl|res://*/Contexts.ClientPortal.ssdl|res://*/Contexts.ClientPortal.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=HARKOO;Initial Catalog=DirectAgentsDEV_0326;Integrated Security=True&quot;" providerName="System.Data.EntityClient" />
+    <add name="ClientPortalProgContext" connectionString="Data Source=HARKOO;Initial Catalog=DirectAgentsDEV_0326;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="ClientPortalSearchContext" connectionString="Data Source=HARKOO;Initial Catalog=DirectAgentsDEV_0326;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DAContext" connectionString="Data Source=HARKOO;Initial Catalog=DirectAgentsDEV_0326;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework codeConfigurationType="DirectAgents.Domain.Contexts.Configurations.AzureConfiguration, DirectAgents.Domain">
     <contexts>
@@ -27,8 +27,8 @@
   </entityFramework>
   <appSettings>
     <!-- Entity Framework Extensions License Settings-->
-    <add key="Z_EntityFramework_Extensions_LicenseName" value="2911;101-DirectAgents"/>
-    <add key="Z_EntityFramework_Extensions_LicenseKey" value="2302a209-d10f-3351-9c2b-75b39d0be380"/>
+    <add key="Z_EntityFramework_Extensions_LicenseName" value="2911;101-DirectAgents" />
+    <add key="Z_EntityFramework_Extensions_LicenseKey" value="2302a209-d10f-3351-9c2b-75b39d0be380" />
     
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -214,7 +214,7 @@
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-    </handlers>
+    <add name="MVCGridHandler" verb="*" path="MVCGridHandler.axd" type="MVCGrid.Web.MVCGridHandler, MVCGrid" /></handlers>
     <modules>
       <!-- add this on Azure... (Release config) -->
       <!--<add type="HttpAuthModule.HttpAuthModule" name="HttpAuthModule" />-->
@@ -320,8 +320,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Net.Http" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.2.0.0" newVersion="4.0.0.0" />
-        <bindingRedirect oldVersion="0.0.0.0-4.2.0.0" newVersion="4.2.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-4.3.4" newVersion="4.3.4" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.IO.Compression" publicKeyToken="b77a5c561934e089" culture="neutral" />
