--- a/3/DirectAgents.Web/DirectAgents.Web/packages.config
+++ b/3/DirectAgents.Web/DirectAgents.Web/packages.config
@@ -19,6 +19,7 @@
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Mono.Options" version="5.3.0" targetFramework="net452" />
+  <package id="MVCGrid.Net" version="1.0.0.61" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net452" />
   <package id="Ninject" version="3.2.0.0" targetFramework="net45" />
   <package id="Ninject.MVC5" version="3.2.1.0" targetFramework="net45" />
@@ -26,6 +27,11 @@
   <package id="Ninject.Web.Common.WebHost" version="3.2.0.0" targetFramework="net45" />
   <package id="ReportViewerForMvc" version="1.0.1" targetFramework="net45" />
   <package id="System.Linq.Dynamic.Core" version="1.0.9" targetFramework="net461" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
   <package id="WebActivatorEx" version="2.0" targetFramework="net45" />
 </packages>
