--- a/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
+++ b/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
@@ -235,7 +235,9 @@
     <Compile Include="Areas\AB\Controllers\VendorsController.cs" />
     <Compile Include="Areas\AB\Models\DashboardVM.cs" />
     <Compile Include="Areas\Admin\AdminAreaRegistration.cs" />
-    <Compile Include="Areas\Admin\Grids\JobHistoryGrid.cs" />
+    <Compile Include="Areas\Admin\Grids\JobHistory\IJobHistoryDataProvider.cs" />
+    <Compile Include="Areas\Admin\Grids\JobHistory\JobHistoryDataProvider.cs" />
+    <Compile Include="Areas\Admin\Grids\JobHistory\JobHistoryGrid.cs" />
     <Compile Include="Areas\Cake\CakeAreaRegistration.cs" />
     <Compile Include="Areas\Cake\Controllers\AdvertisersController.cs" />
     <Compile Include="Areas\Cake\Controllers\CampsController.cs" />
@@ -475,6 +477,7 @@
     <Content Include="Content\kendo\2014.1.416\Uniform\slider-v.gif" />
     <Content Include="Content\kendo\2014.1.416\Uniform\sprite.png" />
     <Content Include="Content\kendo\2014.1.416\Uniform\sprite_2x.png" />
+    <Content Include="Content\scripts\jobHistory.js" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="ReportViewerWebForm.aspx" />
