--- a/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/packages.config
+++ b/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/packages.config
@@ -12,6 +12,11 @@
   <package id="Selenium.Chrome.WebDriver" version="2.43" targetFramework="net461" />
   <package id="Selenium.Support" version="3.141.0" targetFramework="net461" />
   <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net461" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net461" />
   <package id="Z.EntityFramework.Extensions" version="3.16.23" targetFramework="net461" />
 </packages>
