Clean connection strings.

--- a/3/DirectAgents.Web/DirectAgents.Web/Web.config
+++ b/3/DirectAgents.Web/DirectAgents.Web/Web.config
@@ -11,10 +11,10 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="ClientPortalContext" connectionString="metadata=res://*/Contexts.ClientPortal.csdl|res://*/Contexts.ClientPortal.ssdl|res://*/Contexts.ClientPortal.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=HARKOO;Initial Catalog=DirectAgentsDEV_0326;Integrated Security=True&quot;" providerName="System.Data.EntityClient" />
-    <add name="ClientPortalProgContext" connectionString="Data Source=HARKOO;Initial Catalog=DirectAgentsDEV_0326;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="ClientPortalSearchContext" connectionString="Data Source=HARKOO;Initial Catalog=DirectAgentsDEV_0326;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="DAContext" connectionString="Data Source=HARKOO;Initial Catalog=DirectAgentsDEV_0326;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="ClientPortalContext" connectionString="" providerName="System.Data.EntityClient" />
+    <add name="ClientPortalProgContext" connectionString="" providerName="System.Data.SqlClient" />
+    <add name="ClientPortalSearchContext" connectionString="" providerName="System.Data.SqlClient" />
+    <add name="DAContext" connectionString="" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework codeConfigurationType="DirectAgents.Domain.Contexts.Configurations.AzureConfiguration, DirectAgents.Domain">
     <contexts>
