--- a/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/App.config
+++ b/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/App.config
@@ -10,7 +10,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="ClientPortalProgContext" connectionString="Data Source=User-PC;Initial Catalog=DirectAgents1-2019-04-06;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="ClientPortalProgContext" connectionString="" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <loggingConfiguration name="" tracingEnabled="true" defaultCategory="General">
     <listeners>
