--- a/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
+++ b/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
@@ -436,17 +436,16 @@
     <Compile Include="Common\CommandLineUtils.cs" />
     <Compile Include="Common\Compare.cs" />
     <Compile Include="Common\JobExecutionManagement\CommandExecutionContext.cs" />
-    <Compile Include="Common\JobExecutionManagement\JobExecution\IJobExecutionDataWriter.cs" />
     <Compile Include="Common\JobExecutionManagement\JobExecution\Models\AccountLogData.cs" />
     <Compile Include="Common\JobExecutionManagement\JobExecution\Models\JobExecutionLogData.cs" />
     <Compile Include="Common\JobExecutionManagement\JobExecution\Services\JobExecutionItemService.cs" />
-    <Compile Include="Common\JobExecutionManagement\JobExecution\JobExecutionDataWriter.cs" />
     <Compile Include="Common\JobExecutionManagement\JobExecution\Services\IJobExecutionItemService.cs" />
     <Compile Include="Common\JobExecutionManagement\JobExecution\Repositories\IJobExecutionItemRepository.cs" />
     <Compile Include="Common\JobExecutionManagement\JobExecution\Repositories\JobExecutionItemRepository.cs" />
     <Compile Include="Common\JobExecutionManagement\JobExecution\Utils\ExecutionLoggingUtils.cs" />
     <Compile Include="Common\JobExecutionManagement\JobRequests\Exceptions\FailedEtlException.cs" />
-    <Compile Include="Common\JobExecutionManagement\JobRequests\JobExecutionRequestManager.cs" />
+    <Compile Include="Common\JobExecutionManagement\JobRequests\Services\JobRequestManagers\Interfaces\IJobExecutionRequestService.cs" />
+    <Compile Include="Common\JobExecutionManagement\JobRequests\Services\JobRequestManagers\JobExecutionRequestService.cs" />
     <Compile Include="Common\JobExecutionManagement\JobRequests\Models\CommandWithSchedule.cs" />
     <Compile Include="Common\JobExecutionManagement\JobRequests\Repositories\JobRequestRepository.cs" />
     <Compile Include="Common\JobExecutionManagement\JobRequests\Utils\CommandArgumentsConverter.cs" />
@@ -783,9 +782,8 @@
       <DependentUpon>SearchReportRuntimeTextTemplate.tt</DependentUpon>
     </Compile>
     <Compile Include="Reports\SimpleReportManager.cs" />
-    <Compile Include="SimpleRepositories\BasicRepositories\BasicDatabaseRepository.cs" />
-    <Compile Include="SimpleRepositories\BasicRepositories\Interfaces\IBasicRepository.cs" />
-    <Compile Include="SimpleRepositories\RepositoriesContainer.cs" />
+    <Compile Include="SimpleRepositories\BaseRepositories\BaseDatabaseRepository.cs" />
+    <Compile Include="SimpleRepositories\BaseRepositories\Interfaces\IBaseRepository.cs" />
     <Compile Include="SimpleRepositories\RepositoriesWithStorage\Interfaces\IRepositoryWithStorage.cs" />
     <Compile Include="SimpleRepositories\RepositoriesWithStorage\StrategyRepositoryWithStorage.cs" />
     <Compile Include="SimpleRepositories\RepositoriesWithStorage\TypeRepositoryWithStorage.cs" />
