--- a/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
+++ b/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
@@ -289,6 +289,7 @@
     <Compile Include="Areas\SearchAdmin\SearchAdminAreaRegistration.cs" />
     <Compile Include="Constants\OrderBy.cs" />
     <Compile Include="Areas\Admin\Controllers\JobsExecutionController.cs" />
+    <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Helpers\Common.cs" />
     <Compile Include="Controllers\BudgetsController.cs" />
     <Compile Include="Controllers\ControllerBase.cs" />
@@ -925,6 +926,7 @@
     <Folder Include="Areas\RevTrack\Models\" />
     <Folder Include="Areas\RevTrack\Views\Shared\" />
     <Folder Include="Areas\SearchAdmin\Models\" />
+    <Folder Include="Views\Home\" />
     <Folder Include="Views\Test\" />
   </ItemGroup>
   <ItemGroup>
