--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -241,7 +241,9 @@
     <add key="CJWaitAttemptsNumber" value="100" />
     <add key="CJIntervalBetweenRequestsInMinutes" value="10" />
 
-    <add key="MaxNumberOfRequestsToRunWithUniqueArguments" value="3" />
+    <!--Scheduled Requests Launcher Configuration-->
+    <add key="JEM_MaxNumberOfRequestsToRunWithUniqueArguments" value="3" />
+    <add key="JEM_MaxNumberOfRunningRequests" value="20" />
 
   </appSettings>
   <system.serviceModel>
